manifests/base/shipping/security/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shippingservice
  namespace: shippingservice
spec:
  podSelector:
    matchLabels:
      app: shippingservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: checkoutservice
      ports:
        - port: 50051
          protocol: TCP
  egress:
    - {}
